--- a/fileCSS/style.css
+++ b/fileCSS/style.css
@@ -82,7 +82,7 @@ body {
   margin-left: 100px;
 }
 .header__nav--search .search__input {
-  min-width: 545px;
+  min-width: 550px;
   height: 35px;
   border-radius: 10px;
   border: none;
@@ -144,7 +144,6 @@ body {
 
 /* -----------------------Header start-------------------------------- */
 .header {
-  width: 1200px;
   margin-top: 60px;
   margin: auto;
   border-radius: 5px;
@@ -662,3 +661,185 @@ body {
 }
 /* ---------------footer end----------------------- */
 /* -----------------------Main end-------------------------------- */
+
+/* ----------------Reponsive------------------------- */
+@media (max-width: 1199px) {
+  .mobile {
+    margin: 0 auto;
+    width: 1030px;
+  }
+  .nav__header ul {
+    display: flex;
+    justify-content: center;
+  }
+
+  .header__nav--search .search__input {
+    min-width: 480px;
+  }
+
+  .header__name--img {
+    width: 90%;
+    margin: auto;
+  }
+  .slider {
+    height: 270px;
+  }
+  .slides {
+    height: 270px;
+  }
+  .slide img {
+    height: 270px;
+  }
+  .navigation-auto {
+    margin-top: 245px;
+    width: 70%;
+  }
+  .manual-btn {
+    padding: 3px;
+  }
+  .navigation-auto div {
+    padding: 3px;
+  }
+  .navigation-manual {
+    margin-top: -25px;
+
+    width: 70%;
+  }
+  .technology_left-list ul {
+    justify-content: unset;
+  }
+  .technology_left-list ul li {
+    margin: 10px 10px;
+    width: 170px;
+  }
+  .technology_left-list ul li img {
+    height: 120px;
+  }
+  .technology .technology_left {
+    width: 60%;
+  }
+  .technology .technology_right {
+    width: 40%;
+  }
+  .technology_right-list {
+    max-width: 400px;
+  }
+  #products .item {
+    max-width: 210px;
+  }
+}
+
+@media (max-width: 990px) {
+  .mobile {
+    margin: 0 auto;
+  }
+
+  .nav__header ul li a {
+    font-size: 14px;
+  }
+  .nav__banner {
+    display: flex;
+    justify-content: space-between;
+    padding: 15px 35px;
+    align-items: center;
+  }
+  .header__nav--search .search__input {
+    min-width: 350px;
+  }
+
+  .header__name--img {
+    width: 75%;
+  }
+  .slider {
+    height: 270px;
+    /* width: 75%; */
+    margin: auto;
+  }
+  .slides {
+    height: 270px;
+  }
+  .slide img {
+    height: 270px;
+  }
+  .navigation-auto {
+    margin-top: 245px;
+    width: 70%;
+  }
+  .manual-btn {
+    padding: 3px;
+  }
+  .navigation-auto div {
+    padding: 3px;
+  }
+  .navigation-manual {
+    margin-top: -25px;
+
+    width: 70%;
+  }
+  .technology_left-list ul {
+    justify-content: unset;
+  }
+  .technology_left-list ul li {
+    margin: 10px 10px;
+    width: 190px;
+  }
+  .technology_left-list ul li img {
+    height: 140px;
+  }
+  .technology_left-list .technology_text {
+    font-size: 13px;
+  }
+  .technology_right-list img {
+    width: 70px;
+  }
+  .technology_right-list .text p {
+    font-size: 13px;
+  }
+
+  .technology .technology_left {
+    width: 70%;
+  }
+  .technology .technology_right {
+    width: 30%;
+  }
+  .technology_right-list {
+    width: 250px;
+  }
+  #products .item {
+    max-width: 210px;
+  }
+}
+
+@media (max-width: 760px) {
+  .mobile {
+    width: 760px;
+  }
+  .nav__header {
+    display: none;
+  }
+  .technology {
+    display: block;
+  }
+  .technology .technology_left {
+    width: 100%;
+  }
+  .technology_left-text a {
+    display: none;
+  }
+  .technology_left-list ul li {
+    width: 220px;
+  }
+  .technology .technology_left-info {
+    font-size: 1.1rem;
+  }
+  .technology .technology_right {
+    width: 100%;
+  }
+  .technology_right-list {
+    width: unset;
+    max-width: unset;
+  }
+  .technology_right-list img {
+    width: 120px;
+  }
+}
