--- a/fileCSS/style.css
+++ b/fileCSS/style.css
@@ -423,7 +423,7 @@ body {
 }
 .items {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-around;
   border-bottom: 1px solid #d1d1d1;
   margin: 10px 0;
   align-items: center;
@@ -661,7 +661,72 @@ body {
 }
 /* ---------------footer end----------------------- */
 /* -----------------------Main end-------------------------------- */
+/* ------------Them San Pham-------------------- */
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
+.them-moi-san-pham {
+  width: 50%;
+  border: 1px solid #333;
+  box-shadow: var(--box-shadow);
+  border-radius: 5px;
+  margin: 10% auto;
+  padding: 30px;
+  min-height: 500px;
+}
+.them-moi-san-pham input,
+label {
+  width: 100%;
+  display: block;
+}
+.them-moi-san-pham label {
+  margin-top: 20px;
+}
+.them-moi-san-pham input {
+  margin-top: 5px;
+  padding: 10px 20px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+select#hangDT {
+  padding: 5px 10px;
+}
+textarea#moTa {
+  min-width: 400px;
+}
+
+.them-moi-san-pham button {
+  width: 100%;
+  margin-top: 20px !important;
+  padding: 10px 20px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  /* background-color: burlywood; */
+  color: #333;
+  margin: auto;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.them-moi-san-pham button:hover {
+  background: yellow;
+}
+
+/* ------------Them San Pham-------------------- */
+.close {
+  float: right;
+  font-size: 30px;
+  display: none;
+  margin: 15px 15px;
+}
+.bar_icon .open {
+  margin: 0 10px;
+  display: none;
+  font-size: 30px;
+}
 /* ----------------Reponsive------------------------- */
 @media (max-width: 1199px) {
   .mobile {
@@ -692,7 +757,7 @@ body {
   }
   .navigation-auto {
     margin-top: 245px;
-    width: 70%;
+    width: 100%;
   }
   .manual-btn {
     padding: 3px;
@@ -703,7 +768,7 @@ body {
   .navigation-manual {
     margin-top: -25px;
 
-    width: 70%;
+    width: 100%;
   }
   .technology_left-list ul {
     justify-content: unset;
@@ -733,14 +798,23 @@ body {
   .mobile {
     margin: 0 auto;
   }
-
+  .main_oder .itemName span {
+    font-size: 25px;
+  }
+  .information_gender {
+    display: flex;
+    justify-content: flex-start;
+  }
+  .item_price {
+    font-size: 20px;
+  }
   .nav__header ul li a {
     font-size: 14px;
   }
   .nav__banner {
     display: flex;
     justify-content: space-between;
-    padding: 15px 35px;
+    padding: 15px 80px;
     align-items: center;
   }
   .header__nav--search .search__input {
@@ -763,7 +837,7 @@ body {
   }
   .navigation-auto {
     margin-top: 245px;
-    width: 70%;
+    width: 100%;
   }
   .manual-btn {
     padding: 3px;
@@ -774,7 +848,7 @@ body {
   .navigation-manual {
     margin-top: -25px;
 
-    width: 70%;
+    width: 100%;
   }
   .technology_left-list ul {
     justify-content: unset;
@@ -814,8 +888,27 @@ body {
   .technology {
     display: block;
   }
+
+  .bar_icon .open {
+    display: block;
+    margin: 10px 15px;
+  }
   .technology .technology_left {
     width: 100%;
+  }
+  .nav__header {
+    display: none;
+  }
+  .nav__header ul {
+    flex-direction: column;
+    padding-left: 20px;
+    background-color: white;
+  }
+  .nav__header ul li {
+    margin: 5px 15px;
+  }
+  .nav__header ul li a {
+    font-size: 20px;
   }
   .technology_left-text a {
     display: none;
@@ -836,4 +929,15 @@ body {
   .technology_right-list img {
     width: 120px;
   }
+  .navigation-auto {
+    margin-top: 245px;
+    width: 100%;
+  }
+  .navigation-manual {
+    margin-top: -25px;
+
+    width: 100%;
+  }
+}
+@media (max-width: 760px) {
 }
