--- a/fileCSS/otherCSS/sigup.css
+++ b/fileCSS/otherCSS/sigup.css
@@ -21,18 +21,15 @@
   --text-color-price: #d0021c;
 }
 
-.form_SigUp,
-.form_Login {
+.form {
   max-width: 350px;
   margin: 10% auto;
-  background-color: rgb(187, 180, 180);
   box-shadow: var(--box-shadow);
   border-radius: 5px;
   padding: 10px;
 }
 
-.form_SigUp h1,
-.form_Login h1 {
+.form h1 {
   text-align: center;
   text-transform: uppercase;
   margin-bottom: 15px;
@@ -40,15 +37,16 @@
 .accouts,
 .accout,
 .password,
-.passwords {
+.passwords,
+.email {
   display: flex;
   flex-direction: row;
   align-items: center;
 }
 .accouts label,
-.passwords label,
-.accout label,
-.password label {
+.email label,
+.password label .accout label,
+.passwords label {
   margin-bottom: 15px;
   font-size: 1rem;
   min-width: 120px;
@@ -56,15 +54,21 @@
 }
 
 .accouts input,
-.passwords input,
+.email input,
 .accout input,
+.passwords input,
 .password input {
   max-width: 200px;
   padding: 7px 5px;
-  margin-bottom: 15px;
+  margin-bottom: 5px;
   outline: none;
   border: none;
   border-radius: 5px;
+  box-shadow: var(--box-shadow);
+}
+.inputss label {
+  font-size: 11px;
+  color: var(--text-color-price);
 }
 .btn {
   text-align: center;
@@ -91,4 +95,54 @@ a {
 .ifSigup:hover a {
   text-decoration: underline;
   color: #0d0de6;
+}
+
+.toast {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-shadow: var(--box-shadow);
+  width: 400px;
+  margin: 10px;
+  padding: 10px 15px;
+  border-radius: 4px;
+  border-left: 2px solid green;
+  transition: 0.5s;
+}
+@keyframes sliderToast {
+  from {
+    opacity: 0;
+    transform: translateX(-400px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+@keyframes fadeOut {
+  to {
+    opacity: 0;
+  }
+}
+
+.toast_icon {
+  font-size: 20px;
+  color: #ffc107;
+}
+.toast_body--title {
+  font-size: 18px;
+  color: #ffc107;
+  font-weight: 400;
+}
+.toast_body--message {
+  font-size: 14px;
+  color: #333;
+  max-width: 300px;
+}
+.toast_close {
+  font-size: 15px;
+  cursor: pointer;
+}
+.toast_close:hover {
+  opacity: 0.7;
 }
