--- a/fileCSS/style.css
+++ b/fileCSS/style.css
@@ -379,6 +379,13 @@ body {
 
   font-size: 0.9xrem;
 }
+.btnDelete {
+  display: flex;
+  justify-content: space-around;
+}
+.btnDelete i {
+  font-size: 20px;
+}
 .car__text-sale {
   position: absolute;
   top: 50px;
@@ -822,10 +829,10 @@ textarea#moTa {
     display: flex;
     justify-content: flex-start;
   }
-  .them-moi-san-pham label{
+  .them-moi-san-pham label {
     font-size: 12px;
   }
-  select#hangDT{
+  select#hangDT {
     padding: 4px 5px;
   }
   .nav__header ul li a {
@@ -1094,39 +1101,38 @@ textarea#moTa {
   }
 }
 
-@media (max-width: 641px){
-  #products .item{
+@media (max-width: 641px) {
+  #products .item {
     width: 170px;
   }
-  .technology_left-list ul li{
+  .technology_left-list ul li {
     width: 160px;
   }
 }
-@media (max-width: 611px){
-  #products .item{
+@media (max-width: 611px) {
+  #products .item {
     width: 160px;
   }
-  
 }
-@media (max-width: 581px){
-  #products .item{
+@media (max-width: 581px) {
+  #products .item {
     width: 130px;
   }
-  .technology_left-list ul li{
+  .technology_left-list ul li {
     width: 230px;
   }
-  #products .item .btn{
+  #products .item .btn {
     padding: 10px 10px;
   }
 }
-@media (max-width: 525px){
-  #products .item{
+@media (max-width: 525px) {
+  #products .item {
     width: 170px;
   }
-  .technology_left-list ul li{
+  .technology_left-list ul li {
     width: 180px;
   }
-  #products .item .btn{
+  #products .item .btn {
     padding: 10px 10px;
   }
 }
@@ -1361,7 +1367,6 @@ textarea#moTa {
   .them-moi-san-pham {
     width: 80%;
   }
- 
 }
 
 @media (max-width: 394px) {
@@ -1370,7 +1375,6 @@ textarea#moTa {
   }
   .technology_left-list ul li {
     width: 100%;
-    
   }
 }
 
@@ -1383,7 +1387,7 @@ textarea#moTa {
   }
   #products .item .btn {
     padding: 10px 10px;
-}
+  }
 }
 @media (max-width: 300px) {
   #products .item {
@@ -1396,6 +1400,7 @@ textarea#moTa {
   .technology_left-list ul li {
     width: 215px;
   }
-  .nav__banner .header__logo h3 a{
+  .nav__banner .header__logo h3 a {
     font-size: 15px;
   }
+}
