--- a/fileCSS/otherCSS/sigup.css
+++ b/fileCSS/otherCSS/sigup.css
@@ -97,52 +97,77 @@ a {
   color: #0d0de6;
 }
 
-.toast {
+/*  */
+
+.buttons {
+  margin: 50px;
+}
+.buttons button {
+  background: #333;
+  color: white;
+  padding: 10px;
+}
+#toastBox {
+  position: absolute;
+  bottom: 30px;
+  right: 30px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  box-shadow: var(--box-shadow);
-  width: 280px;
-  margin: 10px;
-  padding: 10px 15px;
-  border-radius: 4px;
-  border-left: 2px solid green;
-  transition: 0.5s;
+  flex-direction: column;
+  overflow: hidden;
+  padding: 20px;
 }
-@keyframes sliderToast {
-  from {
-    opacity: 0;
-    transform: translateX(-280px);
-  }
-  to {
-    opacity: 1;
+.toast {
+  border-radius: 5px;
+  width: 240px;
+  height: 60px;
+  background: #fff;
+  font-weight: 500;
+  margin-right: 155px;
+  margin-top: -40px;
+  display: flex;
+  align-items: center;
+  box-shadow: var(--box-shadow);
+  position: fixed;
+  transform: translateX(100%);
+  animation: moveLeft 0.5s linear forwards;
+}
+@keyframes moveLeft {
+  100% {
     transform: translateX(0);
   }
 }
-@keyframes fadeOut {
-  to {
-    opacity: 0;
-  }
+.toast i {
+  margin: 0 20px;
+  font-size: 25px;
+  color: green;
 }
 
-.toast_icon {
-  font-size: 20px;
-  color: #ffc107;
+.toast.tra i {
+  color: red;
 }
-.toast_body--title {
-  font-size: 16px;
-  color: #ffc107;
-  font-weight: 400;
+.toast.Cảnh i {
+  color: #f7941e;
 }
-.toast_body--message {
-  font-size: 13px;
-  color: #333;
-  max-width: 300px;
+
+.toast::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 5px;
+  background: forestgreen;
+  animation: anim 5s linear forwards;
 }
-.toast_close {
-  font-size: 15px;
-  cursor: pointer;
+@keyframes anim {
+  100% {
+    width: 0;
+  }
 }
-.toast_close:hover {
-  opacity: 0.7;
+.toast.tra::after {
+  background: red;
+}
+.toast.Cảnh::after {
+  background: orange;
 }
